    gpasm/testsuite/gpasm.mchip/hexfiles/while1.hex,
    gpasm/testsuite/gpasm.mchip/hexfiles/while2.hex:
    fixed MPASM(X) "Warning[207]: Found label after column 1." which
    generates an error on gpasm
  * gpasm/gpasm.h.in, gpasm/preprocess.c, gpasm/parse.y,
    gpasm/gpasm.c, gpasm/util.c, gpasm/directive.c:
    implemented nested WHILE loops

2012-11-30  Borut Razem  <borutr@users.sourceforge.net>
  * gpasm/lst.c: data sections listing fixes, ibank listing fix
  * gpasm/directive.c: global directive listing fix
  * gpasm/preprocess.c:
    fixed nested define with parameters substitution,
    fixed substitution of mltiple define with parameters in the same line
  * libgputils/gpprocessor.h:
    added gp_processor_check_ibank() declaration

2012-11-26  Borut Razem  <borutr@users.sourceforge.net>
  * gputils/libgputils/gpprocessor.c, gputils/libgputils/gpprocessor.h,
    gputils/libgputils/gpcofflink.c, gputils/gpasm/directive.c:
    implemented feature request #62 - "BANKISEL with enhaced PIC series"
  * gputils/gpasm/testsuite/gpasm.project/listfiles/bankisel5.lst,
    gputils/gpasm/testsuite/gpasm.project/asmfiles/bankisel5.asm,
    gputils/gpasm/testsuite/gpasm.project/hexfiles/bankisel5.hex:
    added regression test for feature request #62 - "BANKISEL with enhaced PIC series"

2012-11-25  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * header/p18f6390.inc: Repaired wrong address of RCREG, H'0FA0' --> H'0FAE'.

2012-11-25  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * header/p18f63j11.inc: Repaired wrong address of RCREG, H'0FD0' --> H'0FAE'.

2012-11-15  Borut Razem  <borutr@users.sourceforge.net>
  * libgputils/gpreadobj.c:
    fixed bug #258 - [GPLINK] error: multiple sections using address 0xYYYY

2012-11-04  Borut Razem  <borutr@users.sourceforge.net>
  * gpasm/evaluate.c, gpasm/directive.c, gpasm/gperror.c:
    fixed bug #186 - unresolvable expressions regarding externals fail silently